# unitree-go1-digital-twin

./: README.md  exec_in_pod.sh  output.csv
digital-twin-service/camera-drivers/: Dockerfile  README.md  apply_astra_rules.sh  build.sh  run_example.sh  terminal.sh
digital-twin-service/digital-replica/: .gitignore  Dockerfile.2023.1.0-ubuntu22.04  README.md  build.sh  run_example_omniverse_client.sh  run_example_webRTC_client.sh  run_example_web_client.sh  terminal.sh
digital-twin-service/gesture-control-app/: Dockerfile  README.md  build.sh  run_example_gpu.sh  run_example_web.sh  terminal.sh
digital-twin-service/go1-base/: .gitignore  Dockerfile  README.md  build.sh  run_example.sh  terminal.sh
digital-twin-service/go1-base/catkin_backup/src/qre_go1/go1_bringup/: package.xml
digital-twin-service/go1-base/catkin_backup/src/qre_go1/go1_bringup/config/: setup.bash
digital-twin-service/go1-base/catkin_backup/src/qre_go1/go1_bringup/scripts/: startup_job.py
digital-twin-service/go1-base/catkin_backup/src/qre_go1/go1_control/: package.xml
digital-twin-service/go1-base/catkin_backup/src/qre_go1/go1_control/launch/: teleop.launch
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_base/: CMakeLists.txt
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_base/include/go1_base/: base.hpp
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_base/include/unitree_legged_sdk/: quadruped.h
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_base/launch/: base.launch
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_base/src/: base.cpp  base_node.cpp
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_base/src/legacy_wrapper/: robot.cpp
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_description/: package.xml
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_description/launch/: go1_rviz.launch
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_description/urdf/: go1.urdf
digital-twin-service/go1-base/catkin_ws/src/qre_go1/go1_description/xacro/: robot.xacro
digital-twin-service/go1-camera/: Dockerfile  README.md  build.sh  run_example.sh  terminal.sh
digital-twin-service/go1-gesture-control/: Dockerfile  README.md  build.sh  run_example.sh  run_example_gpu.sh
digital-twin-service/go1-gesture-control/catkin_ws/src/go1_gesture_control/: CMakeLists.txt  package.xml
digital-twin-service/go1-gesture-control/catkin_ws/src/go1_gesture_control/launch/: circle.launch  gesture_control.launch
digital-twin-service/go1-monitoring/: .gitignore  Dockerfile  README.md  build.sh  run_example.sh  run_example_client.sh  run_example_server.sh  terminal.sh
digital-twin-service/go1-navigation/: Dockerfile  Dockerfile_old  Dockerfile_old_v2  README.md  build.sh  run_example.sh  run_example_swarm.sh  terminal.sh
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/: CMakeLists.txt  package.xml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/launch/: map_navi.launch  odom_navi.launch
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/launch/include/: amcl.launch.xml  custom_map_server.launch.xml  empty_map_server.launch.xml  gps_move_base_teb.launch.xml  map_move_base_teb.launch.xml  map_server.launch.xml  move_base_teb.launch.xml  odom_move_base_teb.launch.xml  ouster.launch.xml  point_cloud_to_laser_scan.launch.xml  velocity_smoother.launch.xml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/maps/: 5tonic-map.yaml  empty_map.yaml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/params/: base_local_planner_params.yaml  base_local_planner_params_teb.yaml  costmap_common_params.yaml  global_planner_params.yaml  move_base_params.yaml  youcs_velocity_smoother.yaml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation/scripts/: send_move_base_goal.py
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation_cartographer/: CMakeLists.txt  package.xml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation_cartographer/config/cartographer/: slam.lua
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation_cartographer/config/move_base/: costmap_common_params.yaml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation_cartographer/launch/: navigate.launch  slam.launch
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation_cartographer/launch/include/: move_base.launch.xml
digital-twin-service/go1-navigation/catkin_ws/src/qre_go1/go1_navigation_cartographer/rviz/: 2d.rviz
digital-twin-service/lidar-drivers/: Dockerfile  README.md  apply_lidar_rules.sh  build.sh  run_example.sh  terminal.sh
digital-twin-service/phidgets-drivers/: .gitignore  Dockerfile  README.md  apply_phidgets_rules.sh  build.sh  run_example.sh
digital-twin-service/ros-master/: Dockerfile  README.md  build.sh  run_example.sh  terminal.sh
digital-twin-service/rviz-vnc/: Dockerfile  README.md  build.sh  run_example.sh  run_example_swarm.sh  terminal.sh
digital-twin-service/video-sender/: Dockerfile  build.sh  run_example.sh  terminal.sh
digital-twin-service/video-streaming-app/: README.md  docker-compose-edge.yml  docker-compose.yml
digital-twin-service/vizanti/: .dockerignore  Dockerfile  README.md  ReadMe.md  build.sh  package.xml  run_example.sh  run_example_swarm.sh  terminal.sh
scenarios/: README.md
scenarios/docker/: README.md  (+2 more)
utils/: get-rosnode-ports-docker.sh  get-rosnode-ports-kubernetes.sh  get-rosnode-ports-kubernetes_old.sh  get_rosnode_ports.sh  k3s-utils.txt  output.csv  ppv-tm-utils.txt  ptpd-utils.md  ptpd-utils.txt  push-to-git.sh  swarm-init.sh  swarm-net-create.sh  test.sh
(+437 files in other folders)
