<?xml version="1.0"?>
<package format="2">
  <name>go1_gesture_control</name>
  <version>0.0.0</version>
  <description>The go1_gesture_control package</description>

  <maintainer email="azahir@pa.uc3m.es">Adam Zahir</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
