<?xml version="1.0"?>
<package format="2">
  <name>go1_bringup</name>
  <version>0.0.0</version>
  <description>The go1_bringup package</description>
  <maintainer email="tahir.mehmood@mybotshop.de">Tahir Mehmood</maintainer>
  <license>PROPREITARY</license>
  <depend>robot_upstart</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>go1_base</build_depend>
  <build_depend>go1_control</build_depend>
  <build_depend>go1_description</build_depend>
  <build_export_depend>go1_base</build_export_depend>
  <build_export_depend>go1_control</build_export_depend>
  <build_export_depend>go1_description</build_export_depend>
  <exec_depend>go1_base</exec_depend>
  <exec_depend>go1_control</exec_depend>
  <exec_depend>go1_description</exec_depend>
  <export>
  </export>
</package>
