<?xml version="1.0"?>
<package format="2">
    <name>go1_description</name>
    <version>0.0.0</version>
    <description>The go1_description package</description>

    <maintainer email="tahir.mehmood@mybotshop.de">Tahir Mehmood</maintainer>
    <license>PROPRIETARY</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>