<?xml version="1.0"?>
<package format="2">
  <name>go1_navigation_cartographer</name>
  <version>0.1.0</version>
  <description>go1 slam/navigation package</description>

  <maintainer email="azahir@pa.uc3m.es">UC3M</maintainer>
  <author email="azahir@pa.uc3m.es">UC3M</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
